2008-11-04  Gary Benson  <gbenson@redhat.com>

	PR icedtea/244:
	* patches/icedtea-f2i-overflow.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2008-11-03 Nix  <nix@esperi.org.uk>
		   Omair Majid  <omajid@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Added icedtea-linker-libs-order.patch.
	* patches/icedtea-linker-libs-order.patch: Fixes icedtea bug#237.

2008-11-03  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-alsa-default-device.patch: New patch. Use the ALSA 
	'default' device if possible. Makes Java play nice with PulseAudio.

2008-11-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse): Fix shift instructions to use only the
	lower order bits of the second argument.

2008-11-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.inline.hpp
	(BytecodeInterpreter::VMintShl): Only shift by the lower five bits.
	(BytecodeInterpreter::VMintShr): Likewise.
	(BytecodeInterpreter::VMintUshr): Likewise.

2008-10-31  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Fix potential DoS issue when dealing with very long
	URL/target addresses.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Decode param values
	correctly.
	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Bypass
	authentication check when origin matches.
	* rt/net/sourceforge/jnlp/security/AccessWarningPane.java: Show proper
	Name/Publisher/Origin values when no certificate is associated.


2008-10-31  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated for new visualvm 1.0.1.
	* patches/icedtea-visualvm.patch: Updated.

2008-10-29  Gary Benson  <gbenson@redhat.com>

	PR icedtea/238:
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse): Fix copy-and-paste error in f2l.

2008-10-27  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Act on window