@@ -1,5 +1,10 @@
 2008-11-04  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
+	(SharkBlock::parse): Fix syntax errors.
+
+2008-11-04  Gary Benson  <gbenson@redhat.com>
+
 	PR icedtea/244:
 	* patches/icedtea-f2i-overflow.patch: New file.
 	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
